# python-hello-world

./: pyproject.toml
python_hello_world/: Jenkinsfile
