[tool.poetry]
name = "python-hello-world"
version = "0.1.0"
description = ""
authors = ["manhpt <manhhailua@gmail.com>"]
readme = "README.md"
packages = [{include = "python_hello_world"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
